@@ -95,9 +95,6 @@ val shadowJarExecutable by tasks.registering(DefaultTask::class) {
                 # versions, e.g. 1.8 = Java 8
                 JV=$(java -version 2>&1 | sed -E -n 's/.* version "([^.-]*).*".*/\1/p')
 
-                # Suppress "An illegal reflective access operation has occurred" on Java 11 (warning) / Java 16 (error) (https://github.com/pinterest/ktlint/issues/1618)
-                X=$( [ "${"$"}JV" -ge "11" ] && echo "--add-opens java.base/java.lang=ALL-UNNAMED" || echo "")
-
                 # Suppress warning "sun.misc.Unsafe::objectFieldOffset" on Java24+ (https://github.com/pinterest/ktlint/issues/2973)
                 X=$( [ "${"$"}JV" -ge "24" ] && echo "${"$"}X --sun-misc-unsafe-memory-access=allow" || echo "")
 
